Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134273

QtGrpc: Abstract namespaces are not working with QLocalSocket

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.0 FF
    • 6.10
    • GRPC
    • None
    • 3
    • 2f970bc3c (dev), 6a9810ed7 (dev), 81bc13aec (dev), 1c49d882b (6.9), 0a2a36155 (6.9.0), d5e5879c1 (6.8), debe759f1 (6.8.3)
    • Foundation Sprint 126, Foundation Sprint 127

      QLocalSocket supports abstract namespaces but the QGrpcHttp2Channel implementation provides no way to set them.

        For Gerrit Dashboard: QTBUG-134273
        # Subject Branch Project Status CR V

            dennisoberst Dennis Oberst
            dennisoberst Dennis Oberst
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: