QGrpcHttp2Channel: Add QLocalSocket abstract namespace support

QLocalSocket supports abstract namespaces. Grpc also supports it. Simply
make it available through the 'unix-abstract' scheme.

Ref: https://grpc.github.io/grpc/core/md_doc_naming.html
Ref: https://doc.qt.io/qt-6/qlocalsocket.html#SocketOption-enum

[ChangeLog][GRPC][QGrpcHttp2Channel] Added abstract namespace support
for QLocalSocket communication through the "unix-abstract" scheme.

Fixes: QTBUG-134273
Change-Id: Iea2b608478e00504d7cdbdff735fcbfb618529d7
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>